--- a/index.html
+++ b/index.html
@@ -3,21 +3,39 @@
 
 <head>
     <meta charset="utf-8" />
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
     <meta name="color-scheme" content="dark">
     <title>Resume - Start Bootstrap Theme</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+
+
+
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet"
         type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+
+    <!-- Owl Carousel-->
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <!-- Owl Carousel-->
+
+    <!-- Owl Carousel-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
+    <!-- Owl Carousel-->
+
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" rel="stylesheet">
+
 </head>
 
 <body id="page-top">
@@ -44,9 +62,9 @@
             <a class="navbar-brand" href="#about">Diego Galdamez</a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#home">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">ABOUT</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">PROJECTS</a></li>
                 </ul>
                 <!-- <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -135,48 +153,103 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="flex-grow-1">
-                    <div class="subheading mb-3">Mechanic 1 - Infinite floor spawner</div>
-                    <p>This mechanic use Blueprint event graph, to add a static mesh as a tile to generate an infinite
-                        floor when the character is moving on the path. </p>
-                    <div class="iframe-container">
-                        <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/k7JcRndF4Qc?autoplay=1&mute=1&controls=0&playlist=k7JcRndF4Qc&loop=1&"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+            <section id="slider" class="pt-5">
+                <div class="container">
+                    <h1 class="text-center"><b>Mechanics</b></h1>
+                    <div class="slider">
+                        <div class="owl-carousel">
+                            <div class="slider-card">
+                                <div class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/k7JcRndF4Qc?autoplay=1&mute=1&controls=0&playlist=k7JcRndF4Qc&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                                <h5 class="mb-0 text-center"><b>Mechanic 1 - Infinite floor spawner</b></h5>
+                                <p class="text-center p-4">This mechanic use Blueprint event graph, to add a static mesh
+                                    as a tile
+                                    to generate an infinite
+                                    floor when the character is moving on the path.</p>
+                            </div>
+                            <div class="slider-card">
+                                <div class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/2Mqui2EAduw?autoplay=1&mute=1&controls=0&playlist=2Mqui2EAduw&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                                <h5 class="mb-0 text-center"><b>Mechanic 2 - Adding Animation Blueprint to a
+                                        Character</b></h5>
+                                <p class="text-center p-4">This mechanic add an Animation Blueprint to a Character.
+                                    Before adding
+                                    the animation Blueprint,
+                                    the animation have been setting in a Locomotion SM to be connected in a Blueprint
+                                    event graph.
+                                </p>
+                            </div>
+                            <div class="slider-card">
+                                <div class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/idqJWCklvSc?autoplay=1&mute=1&controls=0&playlist=idqJWCklvSc&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                                <h5 class="mb-0 text-center"><b>Mechanic 3 - Create random obstacle and Death on hit
+                                        event</b></h5>
+                                <p class="text-center p-4">This mechanic add random obstacle while the character is
+                                    moving forward,
+                                    when the character hits
+                                    an obstacle, trigger an event who disappear the character and replace with an
+                                    animation of
+                                    explosion.</p>
+                            </div>
+                            <!-- <div class="slider-card">
+                                <div class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/idqJWCklvSc?autoplay=1&mute=1&controls=0&playlist=idqJWCklvSc&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div>
+                                </div> -->
+                            <!-- <h5 class="mb-0 text-center"><b>Javascript Tutorials</b></h5>
+                                <p class="text-center p-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam
+                                    temporibus quidem magni qui doloribus quasi natus inventore nisi velit minima.</p>
+                            </div>
+                            <div class="slider-card">
+                                <div class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/k7JcRndF4Qc?autoplay=1&mute=1&controls=0&playlist=k7JcRndF4Qc&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                                <h5 class="mb-0 text-center"><b>Bootstrap Tutorials</b></h5>
+                                <p class="text-center p-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam
+                                    temporibus quidem magni qui doloribus quasi natus inventore nisi velit minima.</p>
+                            </div> -->
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="flex-grow-1">
-                    <div class="subheading mb-3">Mechanic 2 - Adding Animation Blueprint to a Character</div>
-                    <p>This mechanic add an Animation Blueprint to a Character. Before adding the animation Blueprint, the animation have been setting in a Locomotion SM to be connected in a Blueprint event graph. </p>
-                    <div class="iframe-container">
-                        <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/2Mqui2EAduw?autoplay=1&mute=1&controls=0&playlist=2Mqui2EAduw&loop=1&"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
-            </div>
-            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="flex-grow-1">
-                    <div class="subheading mb-3">Mechanic 3 - Create random obstacle and Death on hit event.</div>
-                    <p>This mechanic add random obstacle while the character is moving forward, when the character hits an obstacle, trigger an event who disappear the character and replace with an animation of explosion.</p>
-                    <div class="iframe-container">
-                        <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/idqJWCklvSc?autoplay=1&mute=1&controls=0&playlist=idqJWCklvSc&loop=1&"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
-            </div>
+            </section>
+
             <hr class="m-0" />
             <br>
+            <hr class="m-0" />
+            <br>
+
             <!-- Marble Maze-->
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
@@ -189,45 +262,71 @@
                             allowfullscreen></iframe>
                     </div>
                 </div>
-
             </div>
-            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="flex-grow-1">
-                    <div class="subheading mb-3">Mechanic 1</div>
-                    <p>This mechanic gets a mouse X,Y inputs to set an actor rotation to rotate the maze. </p>
-                    <div class="iframe-container">
-                        <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/jfj1AxZY-Ik?autoplay=1&mute=1&controls=0&playlist=jfj1AxZY-Ik&loop=1&"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+
+            <section id="slider" class="pt-5">
+                <div class="container">
+                    <h1 class="text-center"><b>Mechanics</b></h1>
+                    <div class="slider">
+                        <div class="owl-carousel">
+                            <div class="slider-card">
+                                <div class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/jfj1AxZY-Ik?autoplay=1&mute=1&controls=0&playlist=jfj1AxZY-Ik&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                                <h5 class="mb-0 text-center"><b>Mechanic 1</b></h5>
+                                <p class="text-center p-4">This mechanic gets a mouse X,Y inputs to set an actor
+                                    rotation to rotate
+                                    the maze.</p>
+                            </div>
+                            <div class="slider-card">
+                                <div class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/CEZMCGS1CYc?autoplay=1&mute=1&controls=0&playlist=CEZMCGS1CYc&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                                <h5 class="mb-0 text-center"><b>Mechanic 2</b></h5>
+                                <p class="text-center p-4">This mechanic activate the win condition when the ball hits a
+                                    trigger box
+                                    when is escaping the
+                                    maze.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="flex-grow-1">
-                    <div class="subheading mb-3">Mechanic 2</div>
-                    <p>This mechanic activate the win condition when the ball hits a trigger box when is escaping the maze.</p>
-                    <div class="iframe-container">
-                        <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/CEZMCGS1CYc?autoplay=1&mute=1&controls=0&playlist=CEZMCGS1CYc&loop=1&"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
-            </div>
+            </section>
 
 
-        </div>
     </section>
+
     <hr class="m-0" />
     <br>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
+
+
+    <!-- Owl Carousel-->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/scripts.js"></script>
+    <!-- Owl Carousel-->
+
+
+
 </body>
 
 </html>
