Changing videos and adding BeastBattle project

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <meta name="color-scheme" content="dark">
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>Resume - Diego Galdamez</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
 
 
@@ -139,6 +139,140 @@
     <section class="align-content-center" id="projects" style="padding: 20px;">
         <div class="resume-section-content">
             <h2 class="mb-5">Personal Projects</h2>
+
+            <!-- Beast Battle-->
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Beast Battle - Unreal Engine 4</h3>
+                    <div class="iframe-container">
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/ZmJn9kp3Q_Y?autoplay=1&mute=1&controls=0&playlist=ZmJn9kp3Q_Y&loop=1&"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+
+            <section id="slider" class="pt-5">
+                <div class="container">
+                    <h1 class="text-center"><b>Mechanics</b></h1>
+                    <div class="slider">
+                        <div class="owl-carousel">
+                            <div class="slider-card">
+                                <div class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="video" id="home">
+                                        <video class="img-fluid" autoplay muted loop id="back-video">
+                                            <source src="/assets/img/BB-M1.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                                    <!-- <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/jfj1AxZY-Ik?autoplay=1&mute=1&controls=0&playlist=jfj1AxZY-Ik&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div> -->
+                                </div>
+                                <h5 class="mb-0 text-center"><b>Mechanic 1</b></h5>
+                                <p class="text-center p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis animi tenetur, asperiores dignissimos ab beatae nisi recusandae dolores assumenda aut odio possimus et aliquam molestias quos similique quasi ut odit!.</p>
+                            </div>
+                            <div class="slider-card">
+                                <div class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="video" id="home">
+                                        <video class="img-fluid" autoplay muted loop id="back-video">
+                                            <source src="/assets/img/BB-M2.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                                    <!-- <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/CEZMCGS1CYc?autoplay=1&mute=1&controls=0&playlist=CEZMCGS1CYc&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div> -->
+                                </div>
+                                <h5 class="mb-0 text-center"><b>Mechanic 2</b></h5>
+                                <p class="text-center p-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut maiores aspernatur aliquam labore sequi quisquam delectus ratione? Ad amet sint saepe, illo omnis laborum ab ex reprehenderit aut voluptate accusamus?</p>
+                            </div>
+                            <div class="slider-card">
+                                <div class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="video" id="home">
+                                        <video class="img-fluid" autoplay muted loop id="back-video">
+                                            <source src="/assets/img/BB-M3.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                                    <!-- <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/CEZMCGS1CYc?autoplay=1&mute=1&controls=0&playlist=CEZMCGS1CYc&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div> -->
+                                </div>
+                                <h5 class="mb-0 text-center"><b>Mechanic 3</b></h5>
+                                <p class="text-center p-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut maiores aspernatur aliquam labore sequi quisquam delectus ratione? Ad amet sint saepe, illo omnis laborum ab ex reprehenderit aut voluptate accusamus?</p>
+                            </div>
+                            <div class="slider-card">
+                                <div class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="video" id="home">
+                                        <video class="img-fluid" autoplay muted loop id="back-video">
+                                            <source src="/assets/img/BB-M4.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                                </div>
+                                <h5 class="mb-0 text-center"><b>Mechanic 4</b></h5>
+                                <p class="text-center p-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut maiores aspernatur aliquam
+                                    labore sequi quisquam delectus ratione? Ad amet sint saepe, illo omnis laborum ab ex reprehenderit aut voluptate
+                                    accusamus?</p>
+                            </div>
+                            <div class="slider-card">
+                                <div class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="video" id="home">
+                                        <video class="img-fluid" autoplay muted loop id="back-video">
+                                            <source src="/assets/img/BB-M5.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                                </div>
+                                <h5 class="mb-0 text-center"><b>Mechanic 5</b></h5>
+                                <p class="text-center p-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut maiores aspernatur aliquam
+                                    labore sequi quisquam delectus ratione? Ad amet sint saepe, illo omnis laborum ab ex reprehenderit aut voluptate
+                                    accusamus?</p>
+                            </div>
+                            <div class="slider-card">
+                                <div class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="video" id="home">
+                                        <video class="img-fluid" autoplay muted loop id="back-video">
+                                            <source src="/assets/img/BB-M6.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                                </div>
+                                <h5 class="mb-0 text-center"><b>Mechanic 6</b></h5>
+                                <p class="text-center p-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut maiores aspernatur aliquam
+                                    labore sequi quisquam delectus ratione? Ad amet sint saepe, illo omnis laborum ab ex reprehenderit aut voluptate
+                                    accusamus?</p>
+                            </div>
+                            <div class="slider-card">
+                                <div class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="video" id="home">
+                                        <video class="img-fluid" autoplay muted loop id="back-video">
+                                            <source src="/assets/img/BB-M7.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                                </div>
+                                <h5 class="mb-0 text-center"><b>Mechanic 7</b></h5>
+                                <p class="text-center p-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut maiores aspernatur aliquam
+                                    labore sequi quisquam delectus ratione? Ad amet sint saepe, illo omnis laborum ab ex reprehenderit aut voluptate
+                                    accusamus?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <hr class="m-0" />
+            <br>
+
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
                     <!-- Wizard Runner-->
@@ -160,13 +294,18 @@
                         <div class="owl-carousel">
                             <div class="slider-card">
                                 <div class="d-flex justify-content-center align-items-center mb-4">
-                                    <div class="iframe-container">
+                                    <div class="video" id="home">
+                                        <video class="img-fluid" autoplay muted loop id="back-video">
+                                            <source src="/assets/img/WR-M1.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                                    <!-- <div class="iframe-container">
                                         <iframe width="560" height="315"
                                             src="https://www.youtube.com/embed/k7JcRndF4Qc?autoplay=1&mute=1&controls=0&playlist=k7JcRndF4Qc&loop=1&"
                                             title="YouTube video player" frameborder="0"
                                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                             allowfullscreen></iframe>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <h5 class="mb-0 text-center"><b>Mechanic 1 - Infinite floor spawner</b></h5>
                                 <p class="text-center p-4">This mechanic use Blueprint event graph, to add a static mesh
@@ -176,13 +315,18 @@
                             </div>
                             <div class="slider-card">
                                 <div class="d-flex justify-content-center align-items-center mb-4">
-                                    <div class="iframe-container">
+                                    <div class="video" id="home">
+                                        <video class="img-fluid" autoplay muted loop id="back-video">
+                                            <source src="/assets/img/WR-M2.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                                    <!-- <div class="iframe-container">
                                         <iframe width="560" height="315"
                                             src="https://www.youtube.com/embed/2Mqui2EAduw?autoplay=1&mute=1&controls=0&playlist=2Mqui2EAduw&loop=1&"
                                             title="YouTube video player" frameborder="0"
                                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                             allowfullscreen></iframe>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <h5 class="mb-0 text-center"><b>Mechanic 2 - Adding Animation Blueprint to a
                                         Character</b></h5>
@@ -195,13 +339,18 @@
                             </div>
                             <div class="slider-card">
                                 <div class="d-flex justify-content-center align-items-center mb-4">
-                                    <div class="iframe-container">
+                                    <div class="video" id="home">
+                                        <video class="img-fluid" autoplay muted loop id="back-video">
+                                            <source src="/assets/img/WR-M3.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                                    <!-- <div class="iframe-container">
                                         <iframe width="560" height="315"
                                             src="https://www.youtube.com/embed/idqJWCklvSc?autoplay=1&mute=1&controls=0&playlist=idqJWCklvSc&loop=1&"
                                             title="YouTube video player" frameborder="0"
                                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                             allowfullscreen></iframe>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <h5 class="mb-0 text-center"><b>Mechanic 3 - Create random obstacle and Death on hit
                                         event</b></h5>
@@ -247,8 +396,6 @@
 
             <hr class="m-0" />
             <br>
-            <hr class="m-0" />
-            <br>
 
             <!-- Marble Maze-->
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -271,13 +418,18 @@
                         <div class="owl-carousel">
                             <div class="slider-card">
                                 <div class="d-flex justify-content-center align-items-center mb-4">
-                                    <div class="iframe-container">
+                                    <div class="video" id="home">
+                                        <video class="img-fluid" autoplay muted loop id="back-video">
+                                            <source src="/assets/img/MM-M1.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                                    <!-- <div class="iframe-container">
                                         <iframe width="560" height="315"
                                             src="https://www.youtube.com/embed/jfj1AxZY-Ik?autoplay=1&mute=1&controls=0&playlist=jfj1AxZY-Ik&loop=1&"
                                             title="YouTube video player" frameborder="0"
                                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                             allowfullscreen></iframe>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <h5 class="mb-0 text-center"><b>Mechanic 1</b></h5>
                                 <p class="text-center p-4">This mechanic gets a mouse X,Y inputs to set an actor
@@ -286,13 +438,18 @@
                             </div>
                             <div class="slider-card">
                                 <div class="d-flex justify-content-center align-items-center mb-4">
-                                    <div class="iframe-container">
+                                    <div class="video" id="home">
+                                        <video class="img-fluid" autoplay muted loop id="back-video">
+                                            <source src="/assets/img/MM-M2.mp4" type="video/mp4">
+                                        </video>
+                                    </div>
+                                    <!-- <div class="iframe-container">
                                         <iframe width="560" height="315"
                                             src="https://www.youtube.com/embed/CEZMCGS1CYc?autoplay=1&mute=1&controls=0&playlist=CEZMCGS1CYc&loop=1&"
                                             title="YouTube video player" frameborder="0"
                                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                             allowfullscreen></iframe>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <h5 class="mb-0 text-center"><b>Mechanic 2</b></h5>
                                 <p class="text-center p-4">This mechanic activate the win condition when the ball hits a
