cambiando redaccion de proyectos

--- a/index.html
+++ b/index.html
@@ -115,16 +115,17 @@
 
     <section class="align-content-center" id="projects" style="padding: 20px;">
         <div class="resume-section-content">
-            <h2 class="mb-5">Personal Projects</h2>
-
+            <!-- <h2 class="mb-5">Personal Projects</h2> -->
+            <br />
             <!-- Beast Battle-->
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
                     <h3 class="mb-0">Beast Battle - Unreal Engine 4</h3>
+                    <br />
                     <p class="text-start p-2">Beast Battle is a project where I have been experimenting to develop a
                         turn-based battle mechanics with a top view
                         camera inspired by the game Diablo 4.</p>
-                    <hr />
+                    <br />
                     <div class="iframe-container">
                         <iframe width="560" height="315"
                             src="https://www.youtube.com/embed/ZmJn9kp3Q_Y?autoplay=1&mute=1&controls=0&playlist=ZmJn9kp3Q_Y&loop=1&"
@@ -257,7 +258,10 @@
                 <div class="flex-grow-1">
                     <!-- Wizard Runner-->
                     <h3 class="mb-0">Wizard Runner - Unreal Engine 4</h3>
-                    <p></p>
+                    <br />
+                    <p>Wizard Runner is a project inspired on a subgenre of platform game, trying to avoid the obstacles and moving forward the
+                    most of you can.</p>
+                    <br />
                     <div class="iframe-container">
                         <iframe width="560" height="315"
                             src="https://www.youtube.com/embed/idqJWCklvSc?autoplay=1&mute=1&controls=0&playlist=idqJWCklvSc&loop=1&"
@@ -308,7 +312,7 @@
                                 </div>
                                 <!-- <h5 class="mb-0 text-center"><b>Mechanic 2 - Adding Animation Blueprint to a Character</b></h5> -->
                                 <p class="text-center p-4">Adding an animation blueprint to an imported skeletal mesh
-                                    allows to move the characters with the WASD keys.
+                                    allows to move the characters with the WASD keys and the space bar to jump.
                                 </p>
                             </div>
                             <div class="slider-card">
@@ -375,6 +379,9 @@
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
                     <h3 class="mb-0">Marble Run - Unreal Engine 4</h3>
+                    <br>
+                    <p>Marble Run is a simple project that consist to rotate a platform and try to take out the ball inside the maze.</p>
+                    <br>
                     <div class="iframe-container">
                         <iframe width="560" height="315"
                             src="https://www.youtube.com/embed/r_TDNG1ay4Q?autoplay=1&mute=1&controls=0&playlist=r_TDNG1ay4Q&loop=1&"
