cambiando videos y redaccion

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <div class="modal-fullscreen" id="home">
         <video class="modal-fullscreen" autoplay muted loop id="back-video">
-            <source src="/assets/img/video_home.mp4" type="video/mp4">
+            <source src="/assets/img/video_home_project.mp4" type="video/mp4">
         </video>
     </div>
 
@@ -128,7 +128,7 @@
                     <br />
                     <div class="iframe-container">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/ZmJn9kp3Q_Y?autoplay=1&mute=1&controls=0&playlist=ZmJn9kp3Q_Y&loop=1&"
+                            src="https://www.youtube.com/embed/qAZKXvsjrDo?autoplay=1&mute=1&controls=0&playlist=qAZKXvsjrDo&loop=1&"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
@@ -259,12 +259,13 @@
                     <!-- Wizard Runner-->
                     <h3 class="mb-0">Wizard Runner - Unreal Engine 4</h3>
                     <br />
-                    <p>Wizard Runner is a project inspired on a subgenre of platform game, trying to avoid the obstacles and moving forward the
-                    most of you can.</p>
+                    <p>Wizard Runner is a project inspired on a subgenre of platform game, trying to avoid the obstacles
+                        and moving forward the
+                        most of you can.</p>
                     <br />
                     <div class="iframe-container">
                         <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/idqJWCklvSc?autoplay=1&mute=1&controls=0&playlist=idqJWCklvSc&loop=1&"
+                            src="https://www.youtube.com/embed/BExCnafPH_c?autoplay=1&mute=1&controls=0&playlist=BExCnafPH_c&loop=1&"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
@@ -311,7 +312,7 @@
                                     </div> -->
                                 </div>
                                 <!-- <h5 class="mb-0 text-center"><b>Mechanic 2 - Adding Animation Blueprint to a Character</b></h5> -->
-                                <p class="text-center p-4">Adding an animation blueprint to an imported skeletal mesh
+                                <p class="text-center p-4">Adding an animation blueprint to an imported skeletal mesh,
                                     allows to move the characters with the WASD keys and the space bar to jump.
                                 </p>
                             </div>
@@ -336,8 +337,7 @@
                                     moving forward,
                                     when the character hits
                                     an obstacle, trigger an event who disappear the character and replace with an
-                                    animation of
-                                    explosion.</p>
+                                    explosion animation.</p>
                             </div>
                             <!-- <div class="slider-card">
                                 <div class="d-flex justify-content-center align-items-center mb-4">
@@ -380,7 +380,8 @@
                 <div class="flex-grow-1">
                     <h3 class="mb-0">Marble Run - Unreal Engine 4</h3>
                     <br>
-                    <p>Marble Run is a simple project that consist to rotate a platform and try to take out the ball inside the maze.</p>
+                    <p>Marble Run is a simple project that consist to rotate a platform and try to take out the ball
+                        inside the maze.</p>
                     <br>
                     <div class="iframe-container">
                         <iframe width="560" height="315"
@@ -497,13 +498,13 @@
             <!-- Owl Carousel-->
             <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-            <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script> -->
+
             <script src="js/owl.carousel.min.js"></script>
             <script src="js/script.js"></script>
 
             <!-- Owl Carousel-->
 
-            <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
+
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
                 crossorigin="anonymous"></script>
