--- a/index.html
+++ b/index.html
@@ -472,11 +472,12 @@
                                         diegogaldamez08@gmail.com
                                     </p>
                                     <p class="mg-lg">
-                                        I'm a UE4 Generalist Programmer, I have some experience with programming
-                                        languages
-                                        (Actually
-                                        Python, PHP and Javascript). Welcome to my website where I am sharing some of my
-                                        <strong>personal projects</strong>.
+                                        I'm a generalist software developer. I started my carreer on the manufacturing
+                                        industry, since the very early days I
+                                        discovered my passion to the tech, I found myself working from engineering
+                                        management to data analitics and everything
+                                        in between always oriented to tech, I have knowledge in UE4 and Unity. I have
+                                        experience on Python, PhP and Java Script.
                                     </p>
                                     <br>
                                     <a href="assets/CV.pdf" class="btn btn-primary">More About Me</a>
