--- a/index.html
+++ b/index.html
@@ -445,6 +445,93 @@
                 </div>
             </section>
 
+<hr class="m-0" />
+<br>
+
+<!-- FPS Unity-->
+<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+    <div class="flex-grow-1">
+        <h3 class="mb-0">FPS-D - Unity</h3>
+        <br>
+        <p>FPS-D is a simple project First person shooter created in Unity.</p>
+        <br>
+        <div class="iframe-container">
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/EfpjB2k7TL0?autoplay=1&mute=1&controls=0&playlist=EfpjB2k7TL0&loop=1&"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
+
+<section id="slider" class="pt-5">
+    <div class="container">
+        <h1 class="text-center"><b>Mechanics Log</b></h1>
+        <div class="slider">
+            <div class="owl-carousel">
+                <div class="slider-card">
+                    <div class="d-flex justify-content-center align-items-center mb-4">
+                        <div class="video" id="home">
+                            <video class="img-fluid" autoplay muted loop id="back-video">
+                                <source src="/assets/img/FPS-D-1.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <!-- <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/jfj1AxZY-Ik?autoplay=1&mute=1&controls=0&playlist=jfj1AxZY-Ik&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div> -->
+                    </div>
+                    <h5 class="mb-0 text-center"><b>Mechanic 1</b></h5>
+                    <p class="text-center p-4">Move around the camera of the actor.</p>
+                </div>
+                <div class="slider-card">
+                    <div class="d-flex justify-content-center align-items-center mb-4">
+                        <div class="video" id="home">
+                            <video class="img-fluid" autoplay muted loop id="back-video">
+                                <source src="/assets/img/FPS-D-2.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <!-- <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/CEZMCGS1CYc?autoplay=1&mute=1&controls=0&playlist=CEZMCGS1CYc&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div> -->
+                    </div>
+                    <h5 class="mb-0 text-center"><b>Mechanic 2</b></h5>
+                    <p class="text-center p-4">Move the character around the world.
+                    </p>
+                </div>
+
+                <div class="slider-card">
+                    <div class="d-flex justify-content-center align-items-center mb-4">
+                        <div class="video" id="home">
+                            <video class="img-fluid" autoplay muted loop id="back-video">
+                                <source src="/assets/img/FPS-D-3.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <!-- <div class="iframe-container">
+                                                        <iframe width="560" height="315"
+                                                            src="https://www.youtube.com/embed/CEZMCGS1CYc?autoplay=1&mute=1&controls=0&playlist=CEZMCGS1CYc&loop=1&"
+                                                            title="YouTube video player" frameborder="0"
+                                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                                            allowfullscreen></iframe>
+                                                    </div> -->
+                    </div>
+                    <h5 class="mb-0 text-center"><b>Mechanic 3</b></h5>
+                    <p class="text-center p-4">Shoot and destroy enemy on hit.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
             <div id="parallaxAboutMe">
             </div>
             <hr class="m-0" />
@@ -480,7 +567,7 @@
                                         experience on Python, PhP and Java Script.
                                     </p>
                                     <br>
-                                    <a href="assets/CV.pdf" class="btn btn-primary">More About Me</a>
+                                    <a href="assets/cv.pdf" class="btn btn-primary">More About Me</a>
                                 </div>
                             </div>
                         </div>
