--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                                         experience on Python, PhP and Java Script.
                                     </p>
                                     <br>
-                                    <a href="assets/cv.pdf" class="btn btn-primary">More About Me</a>
+                                    <a href="assets/CV.pdf" class="btn btn-primary">More About Me</a>
                                 </div>
                             </div>
                         </div>
